--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/manage-admin/manage-admin.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/manage-admin/manage-admin.component.html
@@ -1,6 +1,6 @@
-<div style="width:1000px;margin-left: 40px;">
+<div>
   <div>
-    <mat-card class="admin">
+    <mat-card class="admin-card">
       <h3>Add Admin</h3>
       <mat-divider></mat-divider>
       <mat-form-field class="textarea">
@@ -19,8 +19,8 @@
       </button>
     </mat-card>
   </div>
-  <div style="width: 1000px;margin-left: 0px;right: 500px;margin-top: 20px;">
-    <mat-card>
+  <div>
+    <mat-card class="admin-card">
       <h3>List of Admins</h3>
       <mat-divider></mat-divider>
       <div style="overflow-y: scroll;">
