--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
@@ -391,8 +391,7 @@ ul.breadcrumb li:hover {
 .search-result{
   cursor: pointer;
   padding: 16px;
-  
 }
 .search-result:hover{
-  background-color: lightblue;
+  background-color: #eeeeee;
 }
