--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.css
@@ -1,8 +1,3 @@
-/* :host {        
-    width:max-content;
-    height: max-content;
-}     */
-
 .span {
     font-family: Roboto, Helvetica, Arial, sans-serif;
     padding: 10px;
@@ -10,21 +5,12 @@
     font-size: medium;
     cursor: pointer;
     display: flex;
-  
-    /* background-color: #ffffff; */
   }
   .parent {
-    width: max-content; 
+    width: 100%; 
     height: 100%;
   }
   
-  /* .category {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8px;
-    margin-right: 16px;
-    outline: none;
-    align-self: center;
-  } */
   .category,.admin , .settings{
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     margin-left: 8px;
@@ -37,11 +23,5 @@
   }
 .category:hover,.admin:hover,.settings:hover {
     background-color: #eeeeee;
-  }
-  
-  .router{
-    margin-left: 700px;
-    width: max-content;
-    height: max-content;
   }
   
