--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.html
@@ -14,8 +14,8 @@
       </div> 
     </div>
     <mat-divider [vertical]="true"></mat-divider>
-
-  </div>
-  <div style="margin-left: 450px;"><router-outlet></router-outlet>
+    <div style="width: 70%;">
+      <router-outlet></router-outlet>
+    </div>
   </div>
     
