Manage admin Manage categories Add attachment from question-details.component Delete answer in question details (admin only)

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-question-dialog/add-question-dialog.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-question-dialog/add-question-dialog.component.html
@@ -66,7 +66,16 @@
           </div>
         </div>
       </div>
-      <mat-form-field class="textarea">
+      <mat-form-field class="textarea" style="margin-top: 16px;">
+        <mat-label>Category</mat-label>
+        <mat-select [formControl]="categories">
+          <mat-option *ngFor="let option of response" [value]="option">
+            {{ option }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!-- <mat-form-field class="textarea" style="margin-top: 16px;">
         <input
           [formControl]="categories"
           type="text"
@@ -81,7 +90,7 @@
             {{ option }}
           </mat-option>
         </mat-autocomplete>
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field class="textarea">
         <mat-chip-list #chipList>
