--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
@@ -68,8 +68,15 @@
           </div>
         </div>
       </div>
-    
-      <mat-form-field class="textarea">
+      <mat-form-field class="textarea" style="margin-top: 16px;">
+        <mat-label>Category</mat-label>
+        <mat-select [formControl]="categories">
+          <mat-option *ngFor="let option of response" [value]="option">
+            {{ option }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <!-- <mat-form-field class="textarea">
         <input
           [formControl]="categories"
           type="text"
@@ -84,7 +91,7 @@
             {{ option }}
           </mat-option>
         </mat-autocomplete>
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field class="textarea">
         <mat-chip-list #chipList>
