--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.css
@@ -1,27 +1,24 @@
 .span {
     font-family: Roboto, Helvetica, Arial, sans-serif;
-    padding: 10px;
+    padding: 16px;
     outline: none;
-    font-size: medium;
     cursor: pointer;
     display: flex;
+    align-items: center;
+  }
+
+  .span:hover {
+    background-color: #CDE6F9;
   }
   .parent {
     width: 100%; 
     height: 100%;
   }
   
-  .category,.admin , .settings{
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8px;
-    margin-right: 16px;
-    outline: none;
-    align-self: center;
+  .option {
+    margin-left: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   .mat-icon{
     color:#0f4c7b;;
   }
-.category:hover,.admin:hover,.settings:hover {
-    background-color: #eeeeee;
-  }
-  
