--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.html
@@ -1,21 +1,20 @@
 <div class="parent" style="display: flex;">
   <div>
-    <div class="span">
-      <mat-icon >category</mat-icon>
-      <div class="category"  (click)="manage_category()">Manage Category</div>
+    <div class="span" (click)="manage_category()">
+      <mat-icon>category</mat-icon>
+      <div class="option">Manage Category</div>
+    </div>
+    <div class="span" (click)="manage_admin()">
+      <mat-icon>group_add</mat-icon>
+      <div class="option" >Manage Admin</div>
     </div>
     <div class="span">
-        <mat-icon >group_add</mat-icon> 
-        <div class="admin" (click)="manage_admin()">Manage Admin</div>
-      </div> 
-      <div class="span">
-        <mat-icon >settings</mat-icon> 
-        <div class="admin">Settings</div>
-      </div> 
-    </div>
-    <mat-divider [vertical]="true"></mat-divider>
-    <div style="width: 70%;">
-      <router-outlet></router-outlet>
+      <mat-icon>settings</mat-icon>
+      <div class="option" >Settings</div>
     </div>
   </div>
-    
+  <mat-divider [vertical]="true"></mat-divider>
+  <div style="width: 70%;">
+    <router-outlet></router-outlet>
+  </div>
+</div>
