--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/approval-stage/approval-stage.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/approval-stage/approval-stage.component.html
@@ -82,7 +82,15 @@
           </div>
         </div>
       </div> -->
-      <mat-form-field class="textarea">
+      <mat-form-field class="textarea" style="margin-top: 16px;">
+        <mat-label>Category</mat-label>
+        <mat-select [formControl]="categories">
+          <mat-option *ngFor="let option of response" [value]="option">
+            {{ option }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <!-- <mat-form-field class="textarea">
         <input
           [formControl]="categories"
           type="text"
@@ -97,7 +105,7 @@
             {{ option }}
           </mat-option>
         </mat-autocomplete>
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field class="textarea">
         <mat-chip-list #chipList>
@@ -135,12 +143,13 @@
         </mat-chip-list>
       </mat-form-field>
 
-      <label class="textarea" style="margin-top: 16px;margin-bottom: 16px;">Solution</label>
+      <label *ngIf="questionData.isAnswered" class="textarea" style="margin-top: 16px;margin-bottom: 16px;">Solution</label>
       <div *ngFor="let item of questionData.Answers">
         <div class="answer_description">
           <div style="display: flex;">
             <div style="width: 99%;" [innerHTML]="item.description"></div>
             <mat-icon style="width: 1%;margin-right: 10px;" (click)="openDialog(item.description,item.id)">edit</mat-icon>
+            <mat-icon style="width: 1%;margin-right: 10px;" (click)="deleteAnswer(item.id)">delete</mat-icon>
           </div>
           <div style="margin-bottom:16px" *ngIf="answerFiles[item.id].imageModelList.length > 0">
             <div style="display: flex;align-items: center;">
