--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/manage-category/manage-category.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/manage-category/manage-category.component.html
@@ -26,7 +26,7 @@
     <mat-card class="category-card">
       <h3>List of Categories</h3>
       <mat-divider></mat-divider>
-      <div style="overflow-y: scroll;">
+      <div style="overflow-y: scroll;max-height: 400px;">
         <div class="span" *ngFor="let option of get_adminCategory()">
           {{ option }}
         </div>
