--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
@@ -47,9 +47,18 @@
         <a class="menu-items">Administration</a>
       </button>
       <mat-menu #animals="matMenu" xPosition="before">
-        <button mat-menu-item [routerLink]="['/main/administration/manage_category']">Manage Categories</button>
-        <button mat-menu-item [routerLink]="['/main/administration/manage_admin']">Manage Admin</button>
-        <button mat-menu-item>Settings</button>
+        <button mat-menu-item [routerLink]="['/main/administration/manage_category']">
+          <mat-icon>category</mat-icon>
+          <a class="menu-items">Manage Categories</a>
+        </button>
+        <button mat-menu-item [routerLink]="['/main/administration/manage_admin']">
+          <mat-icon>group_add</mat-icon>
+          <a class="menu-items">Manage Admin</a>
+        </button>
+        <button mat-menu-item >
+          <mat-icon>settings</mat-icon>
+          <a class="menu-items">Settings</a>
+        </button>
       </mat-menu>
       <button mat-menu-item (click)="logout()">
         <mat-icon>logout</mat-icon>
