Change in Category selection

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
@@ -69,7 +69,7 @@
         </div>
       </div>
       <mat-form-field class="textarea" style="margin-top: 16px;">
-        <mat-label>Category</mat-label>
+        <mat-label>Select a category</mat-label>
         <mat-select [formControl]="categories">
           <mat-option *ngFor="let option of response" [value]="option">
             {{ option }}
