--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
@@ -4,6 +4,8 @@
   align-items: center;
   margin-bottom: 16px;
   margin-top: 16px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 .question-card {
   margin-bottom: 10px;
