--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
@@ -1,8 +1,9 @@
 .parent {
   display: flex;
   margin-top: 20px;
-  margin-left: 24px;
-  margin-right: 24px;
+  margin-bottom: 20px;
+  margin-left: 10%;
+  margin-right: 10%;
   font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
@@ -54,8 +55,8 @@
   border-radius: 4px;
   width: min-content;
   white-space: nowrap;
+  justify-self: start;
   background-color: #eafa8f;
-  align-content: end;
 }
 .richtexteditor {
   margin-top: 16px;
@@ -279,9 +280,33 @@
 
 .delete {
   cursor: pointer;
-  position: absolute;
-  margin-right: 36px;
-  margin-top: 8px;
-  right: 0;
+  justify-self: flex-end;
+}
+.head {
+  display: flex;
+  width: fit-content;
+  margin-left: 10%;
+  margin-right: 10%;
+  justify-content: space-between;
+}
+
+.breadcrumb {
+  width: max-content;
+  font-family: sans-serif;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 300px;
+}
+
+.list {
+  margin-top: 5px;
+  width: max-content;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: small;
+  font-weight: bold;
+  color: #0f4c7b;
 }
 /* ----------------------------------------------------------------------------------------------------- */
