--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/approval-stage/approval-stage.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/approval-stage/approval-stage.component.css
@@ -7,7 +7,7 @@
   margin-bottom: 24px;
 }
 
-.head {
+.headText {
   margin-top: 16px;
   margin-left: 24px;
   margin-bottom: 16px;
@@ -195,4 +195,33 @@ mat-icon {
 }
 .outerlayout {
   margin-left: 24px;
+  margin-right: 24px;
+}
+
+.head {
+  display: flex;
+  width: fit-content;
+  margin-left: 24px;
+  margin-right: 24px;
+  justify-content: space-between;
+}
+
+.breadcrumb {
+  width: max-content;
+  font-family: sans-serif;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 300px;
+}
+
+.list {
+  margin-top: 5px;
+  width: max-content;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: small;
+  font-weight: bold;
+  color: #0f4c7b;
 }
