--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
+<div class="head">
+  <div class="list">
+    <div class="breadcrumb" (click)="goToMain()">Home</div>
+    <mat-icon>chevron_right</mat-icon>
+    <div class="breadcrumb">
+      Dashboard
+    </div>
+  </div>
+</div>
 <div class="parent-lay">
   <!-- <div class="headers">
     <h2 class="username">{{username}}</h2>
