--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
@@ -1,9 +1,9 @@
 <div>
   <div class="head">
     <div class="list">
-      <div class="breadcrumb" [routerLink]="['/main']">Home</div>
+      <div class="breadcrumb" (click)="main()">Home</div>
       <mat-icon>chevron_right</mat-icon>
-      <div class="breadcrumb" [routerLink]="['/main/home/category']">
+      <div class="breadcrumb" (click)="goToCategory()">
         Category
       </div>
       <mat-icon>chevron_right</mat-icon>
@@ -19,36 +19,26 @@
         *ngFor="let list of editedResponse"
         matRipple
       >
-        <!-- <div *ngIf="(list | json) !== '{}'"> -->
-        <!-- <div *ngIf="list === '{}'"> -->
-          <div class="question-item">
-            <div class="answer-layout">
-              <div class="no-of-answers">{{ list.answerCount }}</div>
-              <div class="answer-text">Answers</div>
+        <div class="question-item">
+          <div class="answer-layout">
+            <div class="no-of-answers">{{ list.answerCount }}</div>
+            <div class="answer-text">Answers</div>
+          </div>
+          <div class="question-layout">
+            <a class="question" (click)="onClick(list.Question.id)">{{
+              list.Question.question
+            }}</a>
+            <div class="description" (click)="onClick(list.Question.id)">
+              {{ list.Question.description }}
             </div>
-            <div class="question-layout">
-              <a
-                class="question"
-                [routerLink]="['/main/qna/approved/', list.Question.id]"
-                (click)="onClick(list.Question.id)"
-                >{{ list.Question.question }}</a
-              >
-              <div
-                class="description"
-                [routerLink]="['/main/qna/approved/', list.Question.id]"
-                (click)="onClick(list.Question.id)"
-              >
-                {{ list.Question.description }}
-              </div>
-              <span
-                *ngFor="let tag of getTags(list.tags)"
-                class="chips"
-                (click)="onTagClick(tag)"
-              >
-                {{ tag }}</span
-              >
-            </div>
-          <!-- </div> -->
+            <span
+              *ngFor="let tag of getTags(list.tags)"
+              class="chips"
+              (click)="onTagClick(tag)"
+            >
+              {{ tag }}</span
+            >
+          </div>
         </div>
       </mat-card>
     </div>
