--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
@@ -38,6 +38,7 @@
 
 .question-layout {
   width: max-content;
+  cursor: pointer;
   float: left;
   padding: 10px;
   margin-left: 16px;
@@ -97,4 +98,36 @@
   border-radius: 15px;
   
 
+}
+mat-icon {
+  cursor: pointer;
+  padding: 2px;
+  margin-left: 5px;
+}
+.head {
+  display: flex;
+  width: fit-content;
+  margin-left: 24px;
+  margin-right: 24px;
+  justify-content: space-between;
+}
+
+.breadcrumb {
+  width: max-content;
+  font-family: sans-serif;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 300px;
+}
+
+.list {
+  margin-top: 5px;
+  width: max-content;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: small;
+  font-weight: bold;
+  color: #0f4c7b;
 }
