--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.html
@@ -1,16 +1,24 @@
-<div class="list-of-questions">
-      <mat-card class="question-card" *ngFor="let list of editedResponse" matRipple >
-        <div class="question-item">
-          <div class="answer-layout">
-            <div class="no-of-answers">{{ list.answerCount }}</div>
-            <div class="answer-text">Answers</div>
-          </div>
-          <div class="question-layout">
-            <a class="question" id="ques" [routerLink]="['/main/approval', list.Question.id]">{{ list.Question.question }}</a>
-            <div class="description" [routerLink]="['/main/approval', list.Question.id]" >{{ list.Question.description }}</div>
-              <span *ngFor="let tag of list.tags" class="chips"> {{ tag }}</span>
-          </div>
-        </div>
-      </mat-card>
+<div class="head">
+  <div class="list">
+    <div class="breadcrumb" (click)="goToMain()">Home</div>
+    <mat-icon>chevron_right</mat-icon>
+    <div class="breadcrumb" (click)="goToApprovals()">
+      Approvals
+    </div>
   </div>
-  
+</div>
+<div class="list-of-questions">
+  <mat-card class="question-card" *ngFor="let list of editedResponse" matRipple >
+    <div class="question-item">
+      <div class="answer-layout">
+        <div class="no-of-answers">{{ list.answerCount }}</div>
+        <div class="answer-text">Answers</div>
+      </div>
+      <div class="question-layout" (click)="onClick(list.Question.id)">
+        <a class="question" id="ques" >{{ list.Question.question }}</a>
+        <div class="description">{{ list.Question.description }}</div>
+          <span *ngFor="let tag of list.tags" class="chips"> {{ tag }}</span>
+      </div>
+    </div>
+  </mat-card>
+</div>
