--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/administration/administration.component.html
@@ -8,10 +8,10 @@
       <mat-icon>group_add</mat-icon>
       <div class="option">Manage Admin</div>
     </div>
-    <div class="span">
+    <!-- <div class="span">
       <mat-icon>settings</mat-icon>
       <div class="option">Settings</div>
-    </div>
+    </div> -->
   </div>
   <mat-divider [vertical]="true"></mat-divider>
   <div style="width: 70%;">
