--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
@@ -55,10 +55,10 @@
           <mat-icon>group_add</mat-icon>
           <a class="menu-items">Manage Admin</a>
         </button>
-        <button mat-menu-item >
+        <!-- <button mat-menu-item >
           <mat-icon>settings</mat-icon>
           <a class="menu-items">Settings</a>
-        </button>
+        </button> -->
       </mat-menu>
       <button mat-menu-item (click)="logout()">
         <mat-icon>logout</mat-icon>
